<?xml version="1.0"?>
<package>
  <name>odometry_estimate</name>
  <version>0.0.0</version>
  <description>The odometry_estimate package</description>

  <maintainer email="ras@todo.todo">ras</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <export>

  </export>
</package>